<resources>
  <string name="app_name">FIT2Gather</string>
  <string name="facebook_app_id">855697307917943</string>
  <string name="fb_login_protocol_scheme">fb855697307917943</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="password">Password</string>
  <string name="username">Username</string>
  <string name="login">Login</string>
  <string name="name">Name</string>
  <string name="register">Register</string>
  <string name="confirm_password">Confirm password</string>
  <string name="register_now">Register now</string>
  <string name="sign_up">Sign up</string>
  <string name="my_account">My Account</string>
  <string name="successful_login">Successful login</string>
  <string name="empty_fields">Can not leave empty fields.</string>
  <string name="new_event">Create gather</string>
  <string name="hint_event_title">Title</string>
  <string name="hint_description">Description</string>
  <string name="privacy_public">Public</string>
  <string name="privacy_private">Private</string>
  <string name="label_date">Date</string>
  <string name="save">SAVE</string>
  <string name="create_event_gather_created">Gather created!</string>
  <string name="create_event_gather_error">Error while creating event</string>
  <string name="birthday">Birthday</string>
  <string name="country">Country</string>
  <string name="city">City</string>
  <string name="difficulty">Difficulty</string>
  <string name="choose">Choose</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>
  <string name="join_fit2gather">Join Fit2Gather</string>

  <string name="welcome_message">Welcome %1$s</string>
  <string name="logout">Logout</string>
  <string name="event_detail_runners">Runners</string>
  <string name="event_detail_distance_km">%s KM</string>
  <string name="event_detail_distance">Distance</string>
  <string name="event_detail_messages">Messages</string>
  <string name="event_detail_join">Join</string>
  <string name="event_detail_route">Route</string>
  <string name="event_detail_info_label">Quick Information</string>
  <string name="loading">Loading...</string>
  <string name="hint_location">Location</string>
  <string name="invalid_login_combination">Invalid username and password combination</string>
  <string name="hint_distance">Distance (km)</string>
  <string name="distance_metric_km">km</string>

  <string name="email">Email</string>
  <string name="introduction_signup">Create fitness events and gather with your friends</string>

</resources>
