<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pt.iul.iscte.daam.fitmeet.account.RegisterFragment"
    >

  <EditText
      android:id="@+id/nameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginBottom="10dp"
      android:inputType="textPersonName"
      android:hint="@string/name"
      />

  <EditText
      android:id="@+id/usernameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:hint="@string/username"
      />

  <EditText
      android:id="@+id/passwordEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:inputType="textPassword"
      android:hint="@string/password"
      />

  <EditText
      android:id="@+id/passwordConfirmationEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:inputType="textPassword"
      android:hint="@string/confirm_password"
      />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/birthday"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:inputType="date"
      android:hint="@string/birthday"
      />
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:id="@+id/country"
      android:hint="@string/country"
      />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginLeft="10dp"
      android:id="@+id/city"
      android:hint="@string/city"
      />

  <Button
      android:id="@+id/registerButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register"
      android:layout_marginLeft="10dp"
      />

</LinearLayout>
