<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="pt.iul.iscte.daam.fitmeet.account.RegisterActivity"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name"
      />

  <EditText
      android:id="@+id/nameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/username"
      />

  <EditText
      android:id="@+id/usernameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      />


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/password"
      />

  <EditText
      android:id="@+id/passwordEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:layout_marginBottom="10dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/confirm_password"
      />

  <EditText
      android:id="@+id/passwordConfirmationEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:layout_marginBottom="10dp"
      />

  <Button
      android:id="@+id/registerButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register"
      />
</LinearLayout>
