<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="pt.iul.iscte.daam.fitmeet.account.LoginFragment"
    >

  <EditText
      android:id="@+id/usernameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:hint="@string/username"
      />

  <EditText
      android:id="@+id/passwordEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:layout_marginBottom="10dp"
      android:hint="@string/password"
      />

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/loginButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login"
      style="@style/Base.Widget.AppCompat.Button.Colored"
      />


  <com.facebook.login.widget.LoginButton
      android:id="@+id/facebook_login_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="30dp"
      android:layout_marginBottom="30dp"
      />

</LinearLayout>

