<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <ImageView
        android:id="@+id/event_detail_feature_graphic"
        android:layout_width="match_parent"
        android:layout_height="170dp"

        android:background="@color/cardview_dark_background"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_light"
        android:gravity="center_vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/event_detail_info_label"
        android:textAllCaps="true"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        />
    <TextView
        android:id="@+id/event_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        tools:text="Hora do Esquilo"
        style="@style/Base.TextAppearance.AppCompat.Title"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/event_detail_location"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:drawablePadding="5dp"
          android:drawableStart="@drawable/ic_map_marker_black_18dp"
          tools:text="Lisbon, Portugal"
          style="@style/TextAppearance.AppCompat.Caption"
          />

      <TextView
          android:id="@+id/event_detail_privacy"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:drawablePadding="5dp"
          android:drawableStart="@drawable/ic_lock_open_outline_black_18dp"
          tools:text="Private"
          style="@style/TextAppearance.AppCompat.Caption"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        >

      <LinearLayout
          android:id="@+id/event_detail_runners"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.3333"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >
        <TextView
            android:id="@+id/event_detail_number_of_runners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1000"
            style="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/event_detail_divider_right_corner_background"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/event_detail_runners"
            android:textAllCaps="true"
            style="@style/TextAppearance.AppCompat.Caption"
            />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/event_detail_distance"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.3333"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >
        <TextView
            android:id="@+id/event_detail_distance_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_detail_distance_km"
            tools:text="7 KM"
            style="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/event_detail_divider_background"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/event_detail_distance"
            android:textAllCaps="true"
            style="@style/TextAppearance.AppCompat.Caption"
            />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/event_detail_messages"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.3333"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >
        <TextView
            android:id="@+id/event_detail_messages_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5"
            style="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/event_detail_divider_left_corner_background"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/event_detail_messages"
            android:textAllCaps="true"
            style="@style/TextAppearance.AppCompat.Caption"
            />
      </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/event_detail_join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/event_detail_join"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_light"
        android:gravity="center_vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/event_detail_route"
        android:textAllCaps="true"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorPrimary"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_light"
        android:gravity="center_vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/event_detail_messages"
        android:textAllCaps="true"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        />
  </LinearLayout>
</ScrollView>