<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      android:orientation="vertical"
      >

    <EditText
        android:id="@+id/new_event_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_google_circles_group_black_18dp"
        android:hint="@string/hint_event_title"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />

    <LinearLayout
        android:id="@+id/new_event_category_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

      <ImageView
          android:id="@+id/new_event_rowing_image"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/ic_rowing_black_48dp"
          />

      <ImageView
          android:id="@+id/new_event_running_image"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginStart="10dp"
          android:src="@drawable/ic_run_black_48dp"
          />
      <ImageView
          android:id="@+id/new_event_cycling_image"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginStart="10dp"
          android:src="@drawable/ic_bike_black_48dp"
          />
      <ImageView
          android:id="@+id/new_event_trailing"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginStart="10dp"
          android:src="@drawable/ic_image_filter_hdr_black_48dp"
          />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />

    <LinearLayout
        android:id="@+id/new_event_location_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_weight="0.5"
          android:drawablePadding="10dp"
          android:drawableStart="@drawable/ic_map_marker_black_18dp"
          android:text="@string/hint_location"
          android:textSize="17sp"
          />

      <Spinner
          android:id="@+id/new_event_location"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="30dp"
          android:layout_marginStart="30dp"
          android:layout_weight="0.5"
          />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />

    <LinearLayout
        android:id="@+id/new_event_distance_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_weight="0.5"
          android:drawablePadding="10dp"
          android:drawableStart="@drawable/ic_map_marker_black_18dp"
          android:text="@string/hint_distance"
          android:textSize="17sp"
          />

      <android.support.v7.widget.AppCompatButton
          android:id="@+id/new_event_distance_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:text="@string/choose"
          style="@style/Widget.AppCompat.Button.Borderless"
          />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />

    <LinearLayout
        android:id="@+id/new_event_difficulty_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_weight="0.5"
          android:drawablePadding="10dp"
          android:drawableStart="@drawable/ic_sword_cross_black_18dp"
          android:text="@string/difficulty"
          android:textSize="17sp"
          />

      <android.support.v7.widget.AppCompatButton
          android:id="@+id/difficulty_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:text="@string/choose"
          style="@style/Widget.AppCompat.Button.Borderless"
          />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />

    <LinearLayout
        android:id="@+id/new_event_date_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        >
      <TextView
          android:id="@+id/new_event_date_label"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_marginStart="30dp"
          android:layout_weight="0.5"
          android:drawablePadding="10dp"
          android:drawableStart="@drawable/ic_clock_black_18dp"
          android:gravity="center_vertical"
          android:text="@string/label_date"
          android:textSize="17sp"
          />

      <android.support.v7.widget.AppCompatButton
          android:id="@+id/new_event_date_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:text="@string/choose"
          style="@style/Widget.AppCompat.Button.Borderless"
          />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />

    <EditText
        android:id="@+id/new_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@android:color/transparent"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_message_text_black_18dp"
        android:hint="@string/hint_description"
        android:minHeight="40dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />


    <LinearLayout
        android:id="@+id/new_event_switch_privacy_container"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/new_event_switch_public"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:gravity="center_vertical"
          android:text="@string/privacy_public"
          />
      <Switch
          android:id="@+id/new_event_switch_privacy"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          />
      <TextView
          android:id="@+id/new_event_switch_private"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:gravity="center_vertical"
          android:text="@string/privacy_private"
          />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/divider"
        />
  </LinearLayout>
</ScrollView>